[gd_scene load_steps=15 format=3 uid="uid://if5mowox57bo"]

[ext_resource type="Script" uid="uid://co1d8x6brpntf" path="res://Classes/BetHUD/BetCard.gd" id="1_6g4d5"]
[ext_resource type="FontFile" uid="uid://cdnb1m88vsvb7" path="res://Assets/GrapeSoda.ttf" id="2_b7x1u"]
[ext_resource type="Texture2D" uid="uid://hcagaamsg1w6" path="res://Assets/BetsUI/MonigotesUIApuesta-Color-Sheet.png" id="3_eintv"]
[ext_resource type="Texture2D" uid="uid://cv02t15y6bned" path="res://Assets/IcoTomi.png" id="4_dyhuk"]
[ext_resource type="Texture2D" uid="uid://bm8k0hgo7w4o6" path="res://Assets/IcoFran.png" id="5_bmkeu"]
[ext_resource type="Texture2D" uid="uid://qp0xdtgiu1yb" path="res://Assets/IcoJuan.png" id="6_j2ujb"]
[ext_resource type="Texture2D" uid="uid://c2p7m80nix6bb" path="res://Assets/IcoPedro.png" id="7_ha88j"]
[ext_resource type="Texture2D" uid="uid://djfe7a8fmo4qv" path="res://Assets/IcoMale.png" id="8_opmtp"]
[ext_resource type="Texture2D" uid="uid://brr6y3b5pkc6p" path="res://Assets/IcoMarta.png" id="9_f1r2y"]
[ext_resource type="AudioStream" uid="uid://dg50ug1jjdsjw" path="res://Classes/BetHUD/BetCardWinningSFX.wav" id="10_ah0my"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4ix5"]
bg_color = Color(0.907942, 0.907942, 0.907942, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5cfxs"]
font = ExtResource("2_b7x1u")
font_size = 21
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bb1p"]
bg_color = Color(0.907942, 0.907942, 0.907942, 1)
border_width_left = 3
border_width_right = 3
border_color = Color(0.909804, 0.909804, 0.909804, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd2yh"]
resource_local_to_scene = true
atlas = ExtResource("3_eintv")
region = Rect2(1056, 0, 176, 96)

[node name="BetCard" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -56.0
offset_right = 88.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(88, 59)
theme_override_constants/separation = 0
script = ExtResource("1_6g4d5")
winningAnimationLength = 0.4
winningAnimationDisplacement = -50.0

[node name="NameContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="NameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_c4ix5")
text = "Toma≈õ"
label_settings = SubResource("LabelSettings_5cfxs")
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="ScoreLabel" type="Label" parent="NameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_6bb1p")
text = "10"
label_settings = SubResource("LabelSettings_5cfxs")
horizontal_alignment = 2
uppercase = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("AtlasTexture_qd2yh")

[node name="PlayerGrid" type="GridContainer" parent="Background"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 80.0
offset_top = 10.0
offset_right = 568.0
offset_bottom = 374.0
scale = Vector2(0.200818, 0.200818)
theme_override_constants/h_separation = -20
columns = 3

[node name="0" type="TextureRect" parent="Background/PlayerGrid"]
visible = false
layout_mode = 2
texture = ExtResource("4_dyhuk")

[node name="1" type="TextureRect" parent="Background/PlayerGrid"]
visible = false
layout_mode = 2
texture = ExtResource("5_bmkeu")

[node name="2" type="TextureRect" parent="Background/PlayerGrid"]
visible = false
layout_mode = 2
texture = ExtResource("7_ha88j")

[node name="3" type="TextureRect" parent="Background/PlayerGrid"]
visible = false
layout_mode = 2
texture = ExtResource("6_j2ujb")

[node name="4" type="TextureRect" parent="Background/PlayerGrid"]
visible = false
layout_mode = 2
texture = ExtResource("8_opmtp")

[node name="5" type="TextureRect" parent="Background/PlayerGrid"]
visible = false
layout_mode = 2
texture = ExtResource("9_f1r2y")

[node name="GenericGrid" type="GridContainer" parent="Background"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 41.0
offset_top = 7.0
offset_right = 491.0
offset_bottom = 371.0
scale = Vector2(0.220724, 0.220724)
theme_override_constants/h_separation = -15
columns = 3

[node name="0" type="TextureRect" parent="Background/GenericGrid"]
visible = false
layout_mode = 2
texture = ExtResource("4_dyhuk")

[node name="1" type="TextureRect" parent="Background/GenericGrid"]
visible = false
layout_mode = 2
texture = ExtResource("5_bmkeu")

[node name="2" type="TextureRect" parent="Background/GenericGrid"]
visible = false
layout_mode = 2
texture = ExtResource("7_ha88j")

[node name="3" type="TextureRect" parent="Background/GenericGrid"]
visible = false
layout_mode = 2
texture = ExtResource("6_j2ujb")

[node name="4" type="TextureRect" parent="Background/GenericGrid"]
visible = false
layout_mode = 2
texture = ExtResource("8_opmtp")

[node name="5" type="TextureRect" parent="Background/GenericGrid"]
visible = false
layout_mode = 2
texture = ExtResource("9_f1r2y")

[node name="BetCardWinningSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ah0my")
